compiler-plugin/testData/diagnostics/internalContributesInjector.kt
@ContributesInjector
internal class <!TARGET_MUST_BE_PUBLIC!>FooActivity<!> : CommonActivity<Unit>()
